# gitstyring

./: .gitignore  .zuul.yaml  README.md  bindep.txt  linters-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  zuul.yaml
orgs/opentelekomcloud-blueprints/people/: members.yml
orgs/opentelekomcloud-blueprints/repositories/: alien4cloud-extended-types.yml  alien4cloud-kubernetes-plugin.yml  alien4cloud-repository-plugins.yml  ansible-heat-example.yml  consul-helm.yml  docker-tosca-types.yml  docs.yml  otc-ansible-example.yml  roland-drs.yml  terraform-CCEEnv.yml  tosca-marketplace.yml  tosca-normative-types.yml  tosca-tutorials.yml  training-env.yml  vault-helm.yml
orgs/opentelekomcloud-blueprints/teams/: members.yml
orgs/opentelekomcloud-docs/people/: members.yml
orgs/opentelekomcloud-docs/repositories/: auto-scaling.yml  bare-metal-server.yml  cloud-container-engine.yml  cloud-eye.yml  cloud-search-service.yml  cloud-server-backup-service.yml  cloud-trace-service.yml  data-ingestion-service.yml  data-warehouse-service.yml  dedicated-host.yml  distributed-cache-service.yml  doc-exports.yml  docsportal.yml  document-database-service.yml  elastic-cloud-server.yml  elastic-ip.yml  elastic-load-balancing.yml  enterprise-dashboard.yml  log-tank-service.yml  modelarts.yml  (+13 more)
orgs/opentelekomcloud-infra/: data.yaml
playbooks/: gitstyring.yaml  pre.yaml  run.yaml  run.yml
playbooks/files/: scan.py
playbooks/templates/: default_zuul.yml
playbooks/vars/: default.yml
roles/vars/: main.yml
tests/: basic.yml  library
tests/tasks/: basic.yml
(+338 files in other folders)
