[metadata]
name = gitstyring
summary = Open Telekom Cloud specific tool for github management
description-file =
    README.md
author = Anton Sidelnikov
classifier =
    Intended Audience :: Ecosystems Squad members
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    Github, Ecosystems, Open Telekom Cloud, otc, T-Systems, Telekom
